<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".Fragment.layout_PROFILE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/idCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="23dp">
                <TextView
                    style="@style/headerTextPrimary"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/personal_information" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/name"
                    android:textColor="@color/activedot"
                    android:textSize="15sp"></TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/username"
                    android:padding="10dp"
                    android:background="@drawable/profile_edit_background">
                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/mobilenumber"
                    android:textColor="@color/activedot"
                    android:textSize="15sp"/>
                <EditText
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:id="@+id/usermobilenumber"
                    android:padding="10dp"
                    android:background="@drawable/profile_edit_background">
                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email_id"
                    android:textColor="@color/activedot"
                    android:textSize="15sp"/>
                <EditText
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:id="@+id/useremail"
                    android:padding="10dp"
                    android:background="@drawable/profile_edit_background">
                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_password_hint"
                    android:textColor="@color/activedot"
                    android:textSize="15sp"/>
                <EditText
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:id="@+id/userpassword"
                    android:padding="10dp"
                    android:background="@drawable/profile_edit_background">
                </EditText>

                <Button
                    android:id="@+id/change"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/background_border"
                    android:text="@string/change"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>