<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginParent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView style="@style/parent">

        <RelativeLayout style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:layout_weight="3"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <TextView
                    style="@style/headerText"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/app_name" />
                <!--                <include-->
                <!--                    layout="@layout/layout_register"/>-->
                <androidx.cardview.widget.CardView
                    style="@style/loginCard"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor"
                    android:elevation="5dp"
                    app:cardCornerRadius="@dimen/loginCardRadius">

                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/headerTextPrimary"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:text="@string/register" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/et_name"
                                style="@style/modifiedEditText"
                                android:hint="Name"
                                android:inputType="text"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/et_mobilenumber"
                                style="@style/modifiedEditText"
                                android:hint="Mobile Number"
                                android:inputType="number"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/et_emailaddress"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_email_hint"
                                android:inputType="textEmailAddress"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/et_password"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:inputType="textPassword"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/et_confirmpassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/register_confirm_password_hint"
                                android:inputType="textPassword"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btn_register"
                            style="@style/loginButton"
                            android:enabled="false"
                            android:textColor="#50ffffff"
                            android:layout_gravity="center"
                            android:text="Register" />

                        <ProgressBar
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:id="@+id/progressid"
                            android:visibility="invisible"
                            android:layout_gravity="center"></ProgressBar>

                        <TextView
                            android:id="@+id/tv_already_have_an_account"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:gravity="center_horizontal"
                            android:text="@string/signup_login_hint"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <ImageView
               android:id="@+id/btn_register_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
